[package]
name = "sysmon-tui"
version = "0.1.1"
edition = "2021"
description = "A fast, beautiful, and lightweight Rust TUI system monitor for Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Isaactheguy244/sysmon"
readme = "README.md"
keywords = ["tui", "system-monitor", "linux", "htop", "terminal"]
categories = ["command-line-utilities"]
authors = ["Isaac Henry"]

[[bin]]
name = "sysmon-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"
